--- a/src/option1/option1.css
+++ b/src/option1/option1.css
@@ -5,8 +5,8 @@
 
 .container {
 	width: 100vw;
-	/* height: 100svh; */
-	height: 93svh;
+	height: 100svh;
+	/* height: 93svh; */
 	background: white;
 	display: flex;
 	overflow-x: scroll !important;
@@ -14,21 +14,21 @@
 	scroll-behavior: smooth;
 	overflow: hidden;
 }
-.container div {
+/* .container  {
 	min-width: 100vw;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 10rem;
 	scroll-snap-align: center;
-}
+} */
 
 .content-wrapper {
-	height: 100%;
-	display: flex;
+	/* height: 100%; */
+	/* display: flex;
 	justify-content: center;
-	text-align: center;
-	overflow-y: hidden;
+	text-align: center; */
+	/* overflow-y: hidden; */
 }
 .content-wrapper h1 {
 	font-size: 7rem;
