--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -66,82 +66,27 @@
 
 /* Play Button */
 
-.circle {
-  grid-column: 2 / 3;
-  grid-row: 4 / 6;
-  width: 9rem;
-  height: 100%;
-  justify-self: center;
-  border-radius: 1rem;
-  display: grid;
-  grid-template-rows: 1fr;
-  justify-items: center;
-  align-items: center;
+.button {
+  border: 0;
+  background: transparent;
+  box-sizing: border-box;
+  width: 0;
+  height: 44px;
 
-  &__btn {
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
-    width: 6rem;
-    height: 6rem;
-    display: flex;
-    margin: .6rem;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font-size: 3.2rem;
-    color: var(--primary);
-    z-index: 300;
-    background: var(--greyLight-1);
-    box-shadow: $shadow;
-    cursor: pointer;
-    position: relative;
-    &.shadow {box-shadow: $inner-shadow;}
+  border-color: transparent transparent transparent #434244;
+  transition: 100ms all ease;
+  cursor: pointer;
 
-    .play {
-      position: absolute;
-      opacity: 0;
-      transition: all .2s linear;
-      &.visibility {
-        opacity: 1;
-      }
-    }
-    .pause {
-      position: absolute;
-      transition: all .2s linear;
-      &.visibility {
-        opacity: 0;
-      }
-    }
+  /*  play state */
+  border-style: solid;
+  border-width: 27px 0 27px 50px;
+
+  &.paused {
+    border-style: double;
+    border-width: 0px 0 0px 50px;
   }
 
-  &__back-1, &__back-2 {
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
-    width: 6rem;
-    height: 6rem;
-    border-radius: 50%;
-    filter: blur(1px);
-    z-index: 100;
-  }
-
-  &__back-1 {
-    box-shadow: .4rem .4rem .8rem var(--greyLight-2), 
-    -.4rem -.4rem .8rem var(--white);
-    background: linear-gradient(to bottom right, var(--greyLight-2) 0%, var(--white) 100%);
-    animation: waves 4s linear infinite;
-
-    &.paused { 
-    animation-play-state: paused;
-    }
-  }
-
-  &__back-2 {
-    box-shadow: .4rem .4rem .8rem var(--greyLight-2), 
-    -.4rem -.4rem .8rem var(--white);
-    animation: waves 4s linear 2s infinite;
-    
-    &.paused { 
-      animation-play-state: paused;
-    }
+  &:hover {
+    border-color: transparent transparent transparent #bcb8c0;
   }
 }
